--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -125,8 +125,9 @@
 		height:108px;
 		position:relative;
 		}
-	#header img {
+	img#logo {
 		padding: 10px 0 0 30px;
+		height: 84px;
 	}
 	.col{
 		float:left;
@@ -237,7 +238,8 @@
 		line-height:76px;	
 		color:#fff;
 		padding:0 20px 0 10px;
-		}		
+		}
+	#header
 
 /* // header */
 
