--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
 
 	<div id="header">
 		
-		<h1><a href="/" title="click here to return to the homepage"><img src="images/logo_green_tick.jpg" alt="PC Repairs" id="logo"></a></h1>
+		<h1><a href="/" title="click here to return to the homepage"><img src="images/pcrepairs_logo.jpg" alt="PC Repairs"></a></h1>
 		
 		<ul id="nav">
 			<li<%= ' class="selected"' if @selected == 'about' %>><a href="/"><span>About Us</span></a></li>
