added skipton to the address

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -10,7 +10,7 @@
 
       <p class="contact">Contact us by telephone on <span class="telephone">+44 (0)1756 796622</span></p>
       
-      <p class="contact">Come visit us at the following address: Thorpe House, Embsay Mill, Embsay, North Yorkshire, BD23 6QF.</p>
+      <p class="contact">Come visit us at the following address: Thorpe House, Embsay Mill, Embsay, Skipton, North Yorkshire, BD23 6QF.</p>
 
       <p>or fill in your details below and press send:</p>
 			<form id="contactForm" action="/" method="post">
