--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,7 +31,7 @@
 	
 	<div id="footer">
 	
-		<p>Copyright &copy; 2009 PC Repairs - All Rights Reserved. Thorpe House, Embsay Mill, Embsay, North Yorkshire, BD23 6QF.</p>
+		<p>Copyright &copy; 2009 PC Repairs - All Rights Reserved. Thorpe House, Embsay Mill, Embsay, Skipton, North Yorkshire, BD23 6QF.</p>
 	
 	</div>
 
