--- a/views/home.erb
+++ b/views/home.erb
@@ -12,7 +12,7 @@
 
 	<h2>What We Do?</h2>	
 	<p><img src="images/img_02.jpg" alt="" /></p>	
-	<p>What don't we do! Business repairs, home repairs, networking, software, web sites. You name it we can do it, and if we can't, we'll tell you and won't charge you for the privilege. We'll even help you find someone who will be able to help you.</p>
+	<p>Business repairs, home repairs, networking, software, web sites. You name it we can do it, and if we can't, we'll tell you and won't charge you for the privilege. We'll even help you find someone who will be able to help you.</p>
 	
 </div>
 
