--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,7 +32,7 @@
 
   	<div id="footer">
 
-  		<p>Copyright &copy; <%= Time.now.year %> PC Repairs - All Rights Reserved. Thorpe House, Embsay Mill, Embsay, Skipton, North Yorkshire, BD23 6QF.</p>
+  		<p>Copyright &copy; <%= Time.now.year %> PC Repairs - All Rights Reserved. P.O. Box 8, Skipton, North Yorkshire.</p>
 
   	</div>
 
